Emotions Use page and Add Formula page added

--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <meta name="description" content="Jianyi Gao's Personal Webpage">
     <meta name="author" content="Jianyi Gao">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:300" rel="stylesheet">
     <!-- font stylesheet
     <link href="#" rel="stylesheet"> -->
     <link rel="stylesheet" type="text/css" href="./style/home.css">
+
   </head>
 
   <body>
@@ -29,8 +31,9 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-            <li><a href="#">Link</a></li>
+            <!-- <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li> -->
+            <li><a href="./views/emotionsUse.html">Mind and Emotions</a></li>
+            <li><a href="./views/emotionsUse.html">Mind and Emotions</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
               <ul class="dropdown-menu">
@@ -69,11 +72,11 @@
     <div class="quote col-md-offset-1 col-md-3">
       <div class="panel panel-default">
         <div class="panel-body">
-          About Essential Oil 
+          About Essential Oil
         </div>
       </div>
     </div>
-    <div class="body">
+    <div class="body col-offset-1">
       <img src="assets/body.svg" id="mainbody" class="col-md-offset-4">
       <button type="button" class="btn btn-default" id="shoulder"><span class="glyphicon glyphicon-record" aria-hidden="true"></span>
           <div class="sympton" id="shoulder_pain">Shoulder pain</div>
