--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
             <!-- <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li> -->
             <li><a href="./views/emotionsUse.html">Mind and Emotions</a></li>
             <li><a href="./views/emotionsUse.html">Mind and Emotions</a></li>
+            <li><a href="./views/login.html">Login</a></li>
+
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
               <ul class="dropdown-menu">
