--- a/index.html
+++ b/index.html
@@ -89,5 +89,20 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    
+    <script src="https://www.gstatic.com/firebasejs/4.12.0/firebase.js"></script>
+<script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyDZG8-clSdbP3a05oO0gTBCXTgF46vNLeg",
+    authDomain: "essentialoils-474c1.firebaseapp.com",
+    databaseURL: "https://essentialoils-474c1.firebaseio.com",
+    projectId: "essentialoils-474c1",
+    storageBucket: "",
+    messagingSenderId: "601290271149"
+  };
+  firebase.initializeApp(config);
+</script>
   </body>
 </html>
+
