--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!-- font stylesheet
     <link href="#" rel="stylesheet"> -->
     <link rel="stylesheet" type="text/css" href="./style/home.css">
+      <link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
 
   </head>
 
@@ -81,7 +82,27 @@
       <button type="button" class="btn btn-default" id="shoulder"><span class="glyphicon glyphicon-record" aria-hidden="true"></span>
           <div class="sympton" id="shoulder_pain">Shoulder pain</div>
       </button>
-
+      <button type="button" class="btn btn-default" id="head"><span class="glyphicon glyphicon-record" aria-hidden="true"></span>
+          <div class="sympton" id="headache">Headache</div>
+      </button>
+      <button type="button" class="btn btn-default" id="mouth"><span class="glyphicon glyphicon-record" aria-hidden="true"></span>
+          <div class="sympton" id="mouth_pain">Pain in the mouth</div>
+      </button>
+      <button type="button" class="btn btn-default" id="stomach"><span class="glyphicon glyphicon-record" aria-hidden="true"></span>
+          <div class="sympton" id="stomach_pain">Upset stomach</div>
+      </button>
+      <button type="button" class="btn btn-default" id="chest"><span class="glyphicon glyphicon-record" aria-hidden="true"></span>
+          <div class="sympton" id="chest_pain">Chest Congestion</div>
+      </button>
+      <button type="button" class="btn btn-default" id="knee"><span class="glyphicon glyphicon-record" aria-hidden="true"></span>
+          <div class="sympton" id="knee_pain">Arthritic Pain</div>
+      </button>
+      <button type="button" class="btn btn-default" id="feet"><span class="glyphicon glyphicon-record" aria-hidden="true"></span>
+          <div class="sympton" id="sore_feet">Sore feet</div>
+      </button>
+      <button type="button" class="btn btn-default" id="hand"><span class="glyphicon glyphicon-record" aria-hidden="true"></span>
+          <div class="sympton" id="hand_pain">Water Blister Hand</div>
+      </button>
     </div>
 
 
