--- a/index.html
+++ b/index.html
@@ -103,32 +103,20 @@
         </div>
       </div>
     </div>
-    <div class="body col-offset-1">
-      <img src="assets/body.svg" id="mainbody" class="col-md-offset-4">
-      <button type="button" class="btn btn-default" id="shoulder"><span class="glyphicon glyphicon-record" aria-hidden="true"></span>
-          <div class="sympton" id="shoulder_pain">Shoulder pain</div>
-      </button>
-      <button type="button" class="btn btn-default" id="head"><span class="glyphicon glyphicon-record" aria-hidden="true"></span>
-          <div class="sympton" id="headache">Headache</div>
-      </button>
-      <button type="button" class="btn btn-default" id="mouth"><span class="glyphicon glyphicon-record" aria-hidden="true"></span>
-          <div class="sympton" id="mouth_pain">Pain in the mouth</div>
-      </button>
-      <button type="button" class="btn btn-default" id="stomach"><span class="glyphicon glyphicon-record" aria-hidden="true"></span>
-          <div class="sympton" id="stomach_pain">Upset stomach</div>
-      </button>
-      <button type="button" class="btn btn-default" id="chest"><span class="glyphicon glyphicon-record" aria-hidden="true"></span>
-          <div class="sympton" id="chest_pain">Chest Congestion</div>
-      </button>
-      <button type="button" class="btn btn-default" id="knee"><span class="glyphicon glyphicon-record" aria-hidden="true"></span>
-          <div class="sympton" id="knee_pain">Arthritic Pain</div>
-      </button>
-      <button type="button" class="btn btn-default" id="feet"><span class="glyphicon glyphicon-record" aria-hidden="true"></span>
-          <div class="sympton" id="sore_feet">Sore feet</div>
-      </button>
-      <button type="button" class="btn btn-default" id="hand"><span class="glyphicon glyphicon-record" aria-hidden="true"></span>
-          <div class="sympton" id="hand_pain">Water Blister Hand</div>
-      </button>
+    <div class="hover">
+      <img href = "#" src="assets/head.jpg" id="head" style="margin-top:8%; width: 400px; margin-left:-15px">
+    </div>
+    <div class="hover">
+      <img href = "#" src="assets/shoulder.jpg" id="shoulder"style="margin-top:10%;width:400px;margin-left:-40px;">
+    </div>
+    <div class="hover">
+      <img href = "#" src="assets/body.jpg" id="body"style=" margin-top:14%;width: 400px;margin-left: 23px;">
+    </div>
+    <div class="hover">
+      <img href = "#" src="assets/hands.jpg" id="hands" style=" width: 400px; margin-left:525px;">
+    </div>
+    <div class="hover">
+      <img href = "#" src="assets/feet.jpg" id="feet" style="margin-top:-3%;width:400px">
     </div>
 
 
